@@ -1,0 +1,7 @@
+Hauki on kala.
+Tässä lauseessa on ääkkösiä.
+Onko siellä kylmä? Täällä ainakin on...
+Missä, missä ovat avaimeni!
+Talossa asui 52-vuotias nainen 22,3 päivää vanhan leppäkertun kanssa←
+kissa, koira,kissa!koira ? kiss3a-
+Vaa'an 'välit' "varras".
