@@ -1,0 +1,78 @@
+W: "Hauki"
+S: " "
+W: "on"
+S: " "
+W: "kala"
+P: "."
+W: "Tässä"
+S: " "
+W: "lauseessa"
+S: " "
+W: "on"
+S: " "
+W: "ääkkösiä"
+P: "."
+W: "Onko"
+S: " "
+W: "siellä"
+S: " "
+W: "kylmä"
+P: "?"
+S: " "
+W: "Täällä"
+S: " "
+W: "ainakin"
+S: " "
+W: "on"
+P: "."
+P: "."
+P: "."
+W: "Missä"
+P: ","
+S: " "
+W: "missä"
+S: " "
+W: "ovat"
+S: " "
+W: "avaimeni"
+P: "!"
+W: "Talossa"
+S: " "
+W: "asui"
+S: " "
+W: "52-vuotias"
+S: " "
+W: "nainen"
+S: " "
+W: "22,3"
+S: " "
+W: "päivää"
+S: " "
+W: "vanhan"
+S: " "
+W: "leppäkertun"
+S: " "
+W: "kanssa"
+U: "←"
+W: "kissa"
+P: ","
+S: " "
+W: "koira"
+P: ","
+W: "kissa"
+P: "!"
+W: "koira"
+S: " "
+P: "?"
+S: " "
+W: "kiss3a-"
+W: "Vaa'an"
+S: " "
+P: "'"
+W: "välit"
+P: "'"
+S: " "
+P: """
+W: "varras"
+P: """
+P: "."
